redone project gallery and fixed it on firefox, also fixed image sized in project view

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -581,23 +581,14 @@ i {
     background-color: rgba(0, 140, 186, 1);
 }
 
-.project-item:hover .project-info {
+.image-holder:hover .project-info {
     display: inline-block;
 }
 
-.project-item:hover .project-heading {
+.image-holder:hover .project-heading {
     display: inline-block;
 }
 
-.project-item:hover .project-image {
-    -webkit-filter: none;
-    filter: none;
-    -webkit-transform: scale(1.02);
-    -ms-transform: scale(1.02);
-    -moz-transform: scale(1.02);
-    transform: scale(1.02);
-
-}
 
 .projectView {
     position: fixed;
@@ -910,6 +901,7 @@ i {
 /*A small hack to prevent flickering on some browsers*/
 .accordion ul {
     width: 2000px;
+    height: 360px;
     /*This will give ample space to the last item to move
     instead of falling down/flickering during hovers.*/
 }
@@ -919,6 +911,7 @@ i {
     display: block;
     width: 30px;
     float: left;
+    height: 100%;
 
     box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
@@ -946,6 +939,8 @@ i {
 .accordion li img {
     display: block;
     width: 540px;
+    object-fit: cover;
+    height: 100%;
 
 }
 
@@ -1305,4 +1300,45 @@ i {
 
 .ng-hide.ng-hide-animate{
     display: none !important;
+}
+
+
+.gallery {
+    width: 100vw;
+    overflow: hidden;
+}
+
+.gallery > .image-holder {
+    width: 25vw;
+    height: 50vh;
+    position: relative;
+    float: left;
+    overflow: hidden;
+}
+
+.gallery > .image-holder > img {
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    transition: all .25s ease-in-out;
+    -moz-transition: all .25s ease-in-out;
+    -webkit-transition: all .25s ease-in-out;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1);
+}
+
+.gallery > .image-holder:hover {
+    z-index: 1;
+}
+
+.gallery > .image-holder:hover > img {
+    -webkit-filter: none;
+    filter: none;
+    transform: scale(1.02,1.02);
+    transition: .3s transform;
 }
